# rasterizer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: geometry.hpp  gl.cpp  gl.hpp  main.cpp  model.cpp  model.hpp  tgaimage.cpp  tgaimage.hpp
